Use new program ID

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,11 +1,14 @@
 [programs.localnet]
 buildspace_solana_program = "E9xi8up1h6ufzGECAP7GE2TM2MmVSTjN9nRQGXkGH7Sb"
 
+[programs.devnet]
+buildspace_solana_program = "GLDmKb1CRS3fS58G658Nd8kfkuyAkQRX9WP9Y68RVf5F"
+
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "/Users/robbie/.config/solana/id.json"
 
 [scripts]
